@@ -144,7 +144,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.23.4</version>
+            <version>3.4.6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.10.13</version>
             <scope>test</scope>
         </dependency>
 
@@ -159,6 +166,20 @@
     <build>
         <finalName>GoMint</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- test code needs access to package private level, so we use add-opens -->
+                    <argLine>
+                        --add-opens gomint.server/io.gomint.server.entity=ALL-UNNAMED --add-reads net.bytebuddy.dynamic.loading=ALL-UNNAMED
+                    </argLine>
+                    <systemPropertyVariables>
+                        <!-- this hidden property force mockito to use method lookup -->
+                        <org.mockito.internal.simulateJava11>true</org.mockito.internal.simulateJava11>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
